# Candy-Crush

./: .gitignore  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationSystem.cpp  AnimationSystem.h  AudioController.cpp  AudioController.h  AudioSystem.cpp  AudioSystem.h  Board.cpp  Board.h  CMakeLists.txt  Common.h  Components.h  DrawableEntity.cpp  DrawableEntity.h  ECS.cpp  ECS.h  Engine.cpp  Engine.h  Events.h  GameState.h  GravityLogic.cpp  GravityLogic.h  GravitySystem.cpp  GravitySystem.h  ISystem.h  InputSystem.cpp  InputSystem.h  MatchLogic.cpp  MatchLogic.h  MatchSystem.cpp  MatchSystem.h  PerformanceBenchmark.cpp  RenderSystem.cpp  RenderSystem.h  ResourceController.cpp  ResourceController.h  (+8 more)
src/: main.cpp
src/controllers/: AudioController.cpp  ResourceController.cpp  UIManager.cpp  UIManager.h
src/ecs/: Components.h  ECS.h
src/engine/: Engine.cpp  Engine.h  SceneController.cpp  SceneController.h
src/events/: EventBus.h  Events.h
src/game/: Board.h  GameState.h  GravityLogic.cpp  GravityLogic.h  MatchLogic.cpp  MatchLogic.h
src/systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  GravitySystem.cpp  GravitySystem.h  InputSystem.cpp  InputSystem.h  MatchSystem.cpp  MatchSystem.h  RenderSystem.cpp  RenderSystem.h  ScoreSystem.cpp  ScoreSystem.h
